--- a/csgo SVM grenades.ipynb
+++ b/csgo SVM grenades.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = pd.read_csv('csgo_data_cleaning/esea_master_dmg_meta_cleaned.pt1.csv')"
    ]
   },
   {
@@ -27,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = pd.read_csv('csgo_data_cleaning/esea_master_dmg_meta_cleaned_pred.pt1.csv')"
+    "X = pd.read_csv('CSGO_Data_Cleaning/esea_master_grenades_hit_meta_cleaned.part1.csv')"
    ]
   },
   {
@@ -38,13 +29,7 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Unnamed: 0', 'CounterTerrorist_vic', 'Terrorist_vic',\n",
-       "       'CounterTerrorist_att', 'None_att', 'Terrorist_att', 'round_1',\n",
-       "       'round_2', 'round_3', 'round_4',\n",
-       "       ...\n",
-       "       'de_nuke', 'de_overpass', 'de_train', 'ECO', 'FORCE_BUY', 'NORMAL',\n",
-       "       'PISTOL_ROUND', 'SEMI_ECO', 'ct_eq_val_norm', 't_eq_val_norm'],\n",
-       "      dtype='object', length=151)"
+       "510845"
       ]
      },
      "execution_count": 4,
@@ -53,36 +38,7 @@
     }
    ],
    "source": [
-    "X.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = X.drop('Unnamed: 0', axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Unnamed: 0', 'CounterTerrorist', 'Terrorist'], dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.columns"
+    "len(X)"
    ]
   },
   {
@@ -91,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = y.drop('Unnamed: 0', axis = 1)"
+    "y = pd.read_csv('CSGO_Data_Cleaning/esea_master_grenades_hit_meta_cleaned_y_true.part1.csv')"
    ]
   },
   {
@@ -100,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = y['CounterTerrorist']"
+    "y = y.drop('Unnamed: 0', axis=1)"
    ]
   },
   {
@@ -109,7 +65,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y.name = 'CounterTerrorist Win'"
+    "X = X.drop('Unnamed: 0', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = y['CounterTerrorist']"
    ]
   },
   {
@@ -118,48 +83,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lr = LogisticRegression()"
+    "y.name = 'CounterTerroristWin'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\larch\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
-       "                   multi_class='warn', n_jobs=None, penalty='l2',\n",
-       "                   random_state=None, solver='warn', tol=0.0001, verbose=0,\n",
-       "                   warm_start=False)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lr.fit(X_train, y_train)"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -168,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = lr.predict(X_test)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33)"
    ]
   },
   {
@@ -177,12 +110,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = pd.Series(y_pred)"
+    "svm = SVC(max_iter=100)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jordanlevy/Desktop/anaconda3/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14 s, sys: 579 ms, total: 14.5 s\n",
+      "Wall time: 13.1 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jordanlevy/Desktop/anaconda3/lib/python3.7/site-packages/sklearn/svm/base.py:241: ConvergenceWarning: Solver terminated early (max_iter=100).  Consider pre-processing your data with StandardScaler or MinMaxScaler.\n",
+      "  % self.max_iter, ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "    decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
+       "    kernel='rbf', max_iter=100, probability=False, random_state=None,\n",
+       "    shrinking=True, tol=0.001, verbose=False)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "svm.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = svm.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6659044804821707"
+       "0.572135319345826"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
